--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,12 @@
     <mat-sidenav #sidenav mode="side" opened class="example-sidenav">
       <mat-list>
         <mat-list-item [routerLinkActive]="'selected'" [routerLink]="route.routerLink" class="list-item" *ngFor="let route of routes">
-
-            <div class="menu-item"><span class="mat-button-wrapper">
-                <mat-icon class="menu-item-icon">{{ route.icon }}</mat-icon>
-              </span>
-            
+          <div class="menu-item">
+            <span class="mat-button-wrapper">
+              <mat-icon class="menu-item-icon">{{ route.icon }}</mat-icon>
+            </span>
             <p class="menu-item-text">{{ route.name }}</p>
+            <span class="dot"></span>
           </div>
         </mat-list-item>
       </mat-list>
@@ -26,7 +26,7 @@
 
     </mat-sidenav>
 
-    <mat-sidenav-content>
+    <mat-sidenav-content class="content">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
