--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./app/theme.scss";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  background-color: $background-html;
+  color: $text;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
