--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<ng-container>
+<app-login *ngIf="!isLoggedIn"></app-login>
+<ng-container *ngIf="isLoggedIn">
   <mat-toolbar class="example-header">
     <button (click)="sidenav.toggle()" class="hamburger mat-button" mat-button=""><span class="mat-button-wrapper">
         <mat-icon class="mat-icon" role="img" svgicon="menu" aria-hidden="true">menu</mat-icon>
@@ -7,6 +8,13 @@
       <div class="mat-button-focus-overlay"></div>
     </button>
     <p class="title">Verzoeksysteem</p>
+
+    <button (click)="logOff()" class="log-off-icon mat-button" mat-button=""><span class="mat-button-wrapper">
+      <mat-icon class="mat-icon" role="img" svgicon="menu" aria-hidden="true">highlight_off</mat-icon>
+    </span>
+    <div class="mat-button-ripple mat-ripple" matripple=""></div>
+    <div class="mat-button-focus-overlay"></div>
+  </button>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-container">
