--- a/src/app/content/login/login.component.html
+++ b/src/app/content/login/login.component.html
@@ -1,16 +1,49 @@
-<div  class="login-main">
+<div class="login-main" *ngIf="!tryingToRegister">
     <mat-card>
-        <mat-card-header>
-            <mat-card-title class="line-item">Login</mat-card-title>
-        </mat-card-header>
-        <mat-card-content >
+        <mat-card-title class="line-item">Login</mat-card-title>
+
+
+        <form [formGroup]="loginForm">
+                <mat-card-content>
+                    <mat-form-field>
+                        <input formControlName="email" required matInput placeholder="Email address">
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input type="password" formControlName="password" required matInput placeholder="Password">
+                    </mat-form-field>
+                </mat-card-content>
+                <button (click)="login(loginForm.value)" mat-raised-button color="primary">Login</button>
+            </form>
+
+
+
+        <!-- <mat-card-content>
             <mat-form-field class="line-item">
                 <input [(ngModel)]="email" matInput placeholder="Email">
             </mat-form-field>
             <mat-form-field class="line-item">
-                <input  [(ngModel)]="password" type="password" matInput placeholder="password">
+                <input [(ngModel)]="password" type="password" matInput placeholder="password">
             </mat-form-field>
         </mat-card-content>
-            <button (click)="login()" mat-raised-button color="primary">Login</button>
+        <button (click)="login()" mat-raised-button color="primary">Login</button> -->
+        <div><span (click)="toggleRegister()" class="register-link">register</span></div>
+    </mat-card>
+</div>
+<div class="login-main" *ngIf="tryingToRegister">
+    <mat-card>
+            <mat-card-title class="line-item">Register</mat-card-title>
+
+        <form [formGroup]="registerForm">
+            <mat-card-content>
+                <mat-form-field>
+                    <input formControlName="email" required matInput placeholder="Email address">
+                </mat-form-field>
+                <mat-form-field>
+                    <input type="password" formControlName="password" required matInput placeholder="Password">
+                </mat-form-field>
+            </mat-card-content>
+            <button (click)="tryRegister(registerForm.value)" mat-raised-button color="primary">Register</button>
+        </form>
+        <div><span (click)="toggleRegister()" class="register-link">login</span></div>
     </mat-card>
 </div>
