uitgeleende items overzicht

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -66,6 +66,9 @@
 .selected span:last-child {
   display: initial;
 }
+.selected {
+  background-color: dodgerblue;
+}
 .log-off-icon {
   right: 25px;
   position: absolute;
