--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
               <mat-icon class="menu-item-icon">{{ route.icon }}</mat-icon>
             </span>
             <p class="menu-item-text">{{ route.name }}</p>
-            <span class="dot"></span>
+            <!-- <span class="dot"></span> -->
           </div>
         </mat-list-item>
       </mat-list>
