--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 200px;
+  width:275px;
   background: $background-block;
   border: none;
   box-shadow: $shadow;
@@ -67,7 +67,7 @@
   display: initial;
 }
 .selected {
-  background-color: dodgerblue;
+  // background-color: dodgerblue;
 }
 .log-off-icon {
   right: 25px;
