--- a/src/app/content/request-list/request-list.component.html
+++ b/src/app/content/request-list/request-list.component.html
@@ -1,7 +1,7 @@
 
 <div *ngIf='items.length !== 0'>
     <div *ngFor="let item of items ">
-        <app-request-item (stateChnge)="refreshItems($event)" [request]='item'></app-request-item>
+        <app-request-item class='item' (stateChnge)="refreshItems($event)" [request]='item'></app-request-item>
     </div>
 </div>
 <div *ngIf='items.length === 0'>
