--- a/src/app/content/loaned-items-list/loaned-items-list.component.html
+++ b/src/app/content/loaned-items-list/loaned-items-list.component.html
@@ -5,6 +5,6 @@
 </div>
 <div *ngIf='items.length === 0'>
     <mat-card>
-        Niks hier.
+        Geen items beschikbaar
     </mat-card>
 </div>
