--- a/src/app/content/request-list/request-list.component.html
+++ b/src/app/content/request-list/request-list.component.html
@@ -6,6 +6,6 @@
 </div>
 <div *ngIf='items.length === 0'>
     <mat-card>
-      Niks hier.
+      Geen verzoeken beschikbaar
     </mat-card>
 </div>
