--- a/src/app/content/loaned-item/loaned-item.component.scss
+++ b/src/app/content/loaned-item/loaned-item.component.scss
@@ -7,8 +7,21 @@
     width:20%;
 }
 .cell-two {
-    width:60%;
+    width:50%;
+}
+
+.cell-three {
+    width:30%;
 }
 .container {
     display: flex
+}
+
+.returnButton {
+    top:50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width:200px;
+    font-size: 20px;
+    float: right;
 }
