add name and auth filtering

--- a/src/app/content/user-profile-select-list/user-profile-select-list.component.html
+++ b/src/app/content/user-profile-select-list/user-profile-select-list.component.html
@@ -3,7 +3,7 @@
     <span class="mat-button-wrapper">
       <mat-icon class="profile-button-icon">account_circle</mat-icon>
     </span>
-    <p class="profile-button-text">{{ authService.currentUser.firebaseUser.email }}</p>
+    <p class="profile-button-text">{{ getUserName() }}</p>
     <span class="mat-button-wrapper">
       <mat-icon class="profile-button-icon">expand_more</mat-icon>
     </span>
