--- a/src/app/content/loaned-items-list/loaned-items-list.component.html
+++ b/src/app/content/loaned-items-list/loaned-items-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf='items.length !== 0'>
     <div *ngFor="let item of items">
-        <app-loaned-item class='item' [loanedItem]='item'></app-loaned-item>
+        <app-loaned-item [loanedItem]='item'></app-loaned-item>
     </div>
 </div>
 <div *ngIf='items.length === 0'>
