small style changes

--- a/src/app/content/request/request.component.scss
+++ b/src/app/content/request/request.component.scss
@@ -33,6 +33,10 @@
             float: right;
           }
 
+          .annuleer{
+            width: 100%;
+          }
+
           .request-center {
             margin: 15px 0;
           }
