--- a/src/app/content/request/request.component.html
+++ b/src/app/content/request/request.component.html
@@ -16,14 +16,14 @@
             <p>{{i.endDate}}</p>
           </ng-template>
           <ng-template #elseBlockG [ngIf]="i.status === 'waitingForApproval'" else elseBlock>
-            <button mat-raised-button color="warn" (click)='cancelRequest(i)'>Annuleren</button>
+            <button class="annuleer" mat-raised-button color="warn" (click)='cancelRequest(i)'>Annuleren</button>
           </ng-template>
           <ng-template #elseBlock>
           </ng-template>
         </div>
         <div class='cell-three'>
           <h2 class='status'>
-            {{i.status}}
+            {{i.status === "Approved" ? 'Goedgekeurd' : 'In afwachting'}}
           </h2>
         </div>
       </div>
